--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
     <script src="./src/scripts/utilities.js" defer></script>
+    <script src="./src/scripts/indices.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
