--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>warming</title>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cantarell:ital,wght@0,400;0,700;1,400;1,700&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    /> -->
     <script src="./src/scripts/utilities.js" defer></script>
     <script src="./src/scripts/indices.js" defer></script>
+    <style href="./src/index.css"></style>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <main class="bg-customblack text-customblue font-rx100 flex justify-center">
+      <div
+        id="root"
+        class="flex flex-col justify-center items-center h-svh font-RX100 text-xl w-7/12 p-8"
+      ></div>
+      <script type="module" src="/src/main.jsx"></script>
+    </main>
   </body>
 </html>
