2nd graph, sticky side panels, year only date input

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <style href="./src/index.css"></style>
   </head>
   <body>
-    <main class="bg-customblack text-customblue font-rx100 flex justify-center">
+    <main class="bg-customblack text-customblue font-rx100 flex justify-center items-center min-h-svh">
       <div
         id="root"
-        class="flex flex-col justify-center items-center h-svh font-RX100 text-md w-10/12 p-8"
+        class="flex flex-col justify-center items-center font-RX100 text-md w-10/12 p-8"
       ></div>
       <script type="module" src="/src/main.jsx"></script>
     </main>
