--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -10,10 +10,11 @@
     <style href="./src/index.css"></style>
   </head>
   <body>
-    <main class="bg-customblack text-customblue font-rx100 flex justify-center items-center min-h-svh">
+    <main class="dark:bg-customblack text-customblue font-rx100 flex justify-center items-center">
+    <!-- <main class="main"> -->
       <div
         id="root"
-        class="flex flex-col justify-center items-center font-RX100 text-md w-10/12 p-8"
+        class="flex flex-col justify-center items-center font-RX100 text-md"
       ></div>
       <script type="module" src="/src/main.jsx"></script>
     </main>
