--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>warming</title>
-    <script src="./src/scripts/utilities.js" defer></script>
-    <script src="./src/scripts/indices.js" defer></script>
+    <script src="./src/scripts/utilities.js" type="module" defer></script>
+    <script src="./src/scripts/indices.js" type="module" defer></script>
     <style href="./src/index.css"></style>
   </head>
   <body>
