--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <main class="main"> -->
       <div
         id="root"
-        class="flex flex-col justify-center items-center font-RX100 text-md"
+        class="flex flex-col justify-center items-center font-RX100 text-md p-4 w-full"
       ></div>
       <script type="module" src="/src/main.jsx"></script>
     </main>
