commit pre push

--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/seihlo-favicon-black.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>warming</title>
+    <title>seihlo</title>
     <script src="./src/scripts/utilities.js" type="module" defer></script>
     <script src="./src/scripts/indices.js" type="module" defer></script>
     <style href="./src/index.css"></style>
   </head>
   <body>
     <main class="dark:bg-customblack text-customblue font-rx100 flex justify-center items-center">
-    <!-- <main class="main"> -->
       <div
         id="root"
         class="flex flex-col justify-center items-center font-RX100 text-md p-4 w-full"
